# KIV-OS

./: .gitignore  CMakeLists.txt  README.md  badblock_recovery.c  badblock_recovery.h  fat.c  fat_structure.h
FAT/: build.sh  library.c  library.h  output.fat
doc/: Untitled Diagram.xml  diagram.xml  prezentace.odp
msvc/boot/: boot.sln  boot.vcxproj
msvc/boot/Debug/: boot.ilk  kernel.exp  kernel.ilk  kernel.lib  user.exp  user.lib  vc141.idb
msvc/boot/Release/: boot.iobj  (+1 more)
msvc/kernel/: kernel.vcxproj  kernel.vcxproj.filters
msvc/user/: user.vcxproj  user.vcxproj.filters
src/api/: api.h  api_extension.h
src/kernel/: BinSemaphore.cpp  BinSemaphore.h  Console.cpp  Console.h  ConsoleInputStream.cpp  ConsoleInputStream.h  ConsoleOutputStream.cpp  ConsoleOutputStream.h  FS.cpp  FS.h  FatFS.cpp  FatFS.h  FileHandler.cpp  FileHandler.h  Handler.h  IHandleObject.h  Pipe.cpp  Pipe.h  PipeHandler.cpp  PipeHandler.h  PipeHnadler.cpp  ProcFilesystem.cpp  ProcFilesystem.h  ProcessManager.cpp  ProcessManager.h  Test_vfs.cpp  Test_vfs.h  Vfs.cpp  Vfs.h  VfsFat.cpp  VfsFat.h  VfsStructures.h  fat.h  fat_structure.h  handles.cpp  handles.h  io.cpp  io.h  kernel.cpp  kernel.h  (+6 more)
src/user/: Arguments.cpp  Arguments.h  CommandsWrapper.cpp  CommandsWrapper.h  cd.cpp  cd.h  commands.cpp  commands.h  dir.cpp  dir.h  echo.cpp  echo.h  freq.cpp  freq.h  md.cpp  md.h  pipe_test.cpp  pipe_test.h  ps.cpp  ps.h  rd.cpp  rd.h  rgen.cpp  rgen.h  rtl.cpp  rtl.h  shell.cpp  shell.h  shutdown.cpp  shutdown.h  sort.cpp  sort.h  string.cpp  string.h  type.cpp  type.h  user.def  wc.cpp  wc.h
(+118 files in other folders)
